--- a/socket基础通信/CMakeLists.txt
+++ b/socket基础通信/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED)
 
 add_executable(demo1 demo1.cpp)
+add_executable(demo_client demo_client.cpp)
 add_executable(demo2 demo2.cpp)
+add_executable(demo_server demo_server.cpp)
