--- a/socket基础通信/CMakeLists.txt
+++ b/socket基础通信/CMakeLists.txt
@@ -8,3 +8,5 @@ add_executable(demo1 demo1.cpp)
 add_executable(demo_client demo_client.cpp)
 add_executable(demo2 demo2.cpp)
 add_executable(demo_server demo_server.cpp)
+add_executable(tcpselect tcpselect.cpp)
+add_executable(clientselect clientselect.cpp)
