--- a/socket基础通信/CMakeLists.txt
+++ b/socket基础通信/CMakeLists.txt
@@ -10,3 +10,4 @@ add_executable(demo2 demo2.cpp)
 add_executable(demo_server demo_server.cpp)
 add_executable(tcpselect tcpselect.cpp)
 add_executable(clientselect clientselect.cpp)
+add_executable(demo_epoll1 demo_epoll1.cpp)
