--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "cmake.sourceDirectory": "/home/gao/code/SocketRookie/socket基础通信",
+    "cmake.sourceDirectory": "/home/gao/code/SocketRookie",
     "files.associations": {
         "*.sqlbook": "sql",
         "*.ndjson": "jsonl",
